Revert "android_app_dev init"
This reverts commit 143a8015d7129b2210b0a634d85a29ff9f0e6cf1.